# POLL

./: db.sqlite3  pyproject.toml
tes/: admin.py  models.py  urls.py  views.py
tes/migrations/: 0001_initial.py
tes/static/css/: base.css
tes/templates/tes/: add_polls.html  base.html  change_password.html  detail.html  index.html  login.html  polls_audit.html  polls_audit_detail.html  polls_detail.html  polls_list.html  polls_list_my.html  results.html  sign_up.html
test1/: settings.py  urls.py
